feat(mcp): implement full elicitation request/response flow
Elicitation API (injection module):
- Add PrimitiveSchema interface and concrete schema types: StringSchema,
  BooleanSchema, NumberSchema, IntegerSchema, EnumSchema
- Add ElicitationRequest value class with builder (validates at least one
  schema property is provided, configurable timeout, default 30 s)
- Add ElicitationResponse value class with Action enum (ACCEPT, DECLINE, CANCEL)
  and typed accessors (getString, getBoolean, getInteger, getNumber, getStrings)
- Add ElicitationSender interface to be injected into tool methods

Elicitation runtime (subsystem):
- Add PendingRequestRegistry: tracks server-initiated requests via
  CompletableFuture; ID coercion handles both JSON number and string ids
- Add ElicitationSenderImpl: sends elicitation/create, blocks the tool thread
  until the client responds (or times out with cleanup), parses the result
- Add ToolMessageHandler.buildArguments(): injects ElicitationSenderImpl for
  ElicitationSender-typed parameters, delegates to prepareArguments for others
- Route client responses (result/error messages) to PendingRequestRegistry in
  MCPMessageHandler instead of discarding them
- Filter ElicitationSender parameters from the tools/list inputSchema
- Advertise elicitation capability in server capabilities on initialize
- Fix MCPServerDependencyProcessor.processTools() to iterate all method
  parameters in declaration order, not just @ToolArg-annotated ones, so that
  ElicitationSender parameters are included in argumentTypes() and the
  MethodHandle resolves to the correct signature

Tests:
- 39 unit tests: schema JSON serialization, PendingRequestRegistry round-trips
  and ID coercion, ElicitationSenderImpl isSupported/send/timeout, and
  MCPMessageHandler response routing and capability advertisement
- 4 integration tests: elicitation tool listed without ElicitationSender in
  inputSchema, full accept/decline round-trips, mixed regular args + elicitation

Sig